Used tabble rates shipping method

--- a/app/locale/ru_RU/IWD_Opc.csv
+++ b/app/locale/ru_RU/IWD_Opc.csv
@@ -370,3 +370,8 @@
 "Orally","Устное поздравление"
 "Delivery time","* Время доставки"
 "Other city","Другое место"
+"Shipping cities","Города доставки"
+"Greeting method : ","Поздравить : "
+"Greeting text : "," Текст поздравления : "
+"Additional information : ","Дополнительно : "
+
